--- a/install
+++ b/install
@@ -1,8 +1,36 @@
 echo "Build all the subrepositories for Pacose 23"
 
-mkdir solver-proxy/build && cd solver-proxy/build && cmake .. && make -j && cd ../..
-cd maxpre2 && make lib && cd ..
-mkdir build && cd build && cmake .. && make -j
+# glucose 3
+cd solver-proxy/glucose-3.0/core
+make libr
+cd ../../..
+
+# glucose 4.2.1
+mkdir solver-proxy/glucose-4.2.1/build
+cd solver-proxy/glucose-4.2.1/build
+cmake ..
+make
+cd ../../..
+
+# solver proxy
+mkdir solver-proxy/build 
+cd solver-proxy/build 
+cmake .. 
+make -j 
+cd ../..
+
+# maxpre2
+cd maxpre2 
+make lib 
+cd ..
+
+# Pacose
+mkdir build 
+cd build 
+cmake .. 
+make -j
+cd ..
+
 echo ""
 echo "For future builds just execute make or make test in the build directory of Pacose."
 echo ""
