--- a/README
+++ b/README
@@ -2,13 +2,7 @@ This is going to be the Pacose MaxSAT solver.
 
 To generate a makefile follow the steps indicated below or execute ./install which does exactly the following steps.
 
-## build the solver proxy module
-mkdir solver-proxy/build && cd solver-proxy/build && cmake .. && make -j && cd ../..
-
-## build maxpre2 library
-cd maxpre && make lib && cd ..
-
-## finally build Pacose
+## Build Pacose
 mkdir build && cd build && cmake .. && make -j
 
 make test <- executes the Regression suite (only the short version)
