--- a/install
+++ b/install
@@ -1,30 +1,4 @@
-echo "Build all the subrepositories for Pacose 23"
-
-# glucose 4.2.1
-#mkdir solver-proxy/glucose-4.2.1/build
-#cd solver-proxy/glucose-4.2.1/build
-#cmake ..
-#make
-#cd ../..
-
-# CaDiCaL
-#cd cadical
-#./configure && make -j
-#cd ../..
-#cd ..
-
-
-# solver proxy
-#mkdir solver-proxy/build 
-#cd solver-proxy/build 
-#cmake .. 
-#make -j 
-#cd ../..
-
-# maxpre2
-cd maxpre2 
-make lib
-cd ..
+echo "Build Pacose 23"
 
 # Pacose
 mkdir build 
