--- a/README
+++ b/README
@@ -1,6 +1,9 @@
 This is going to be the Pacose MaxSAT solver.
 
-To generate a makefile follow the steps indicated below or execute ./install which does exactly the following steps.
+## The first time you have to run ./configure in cadical -- it rebuilds cadical each time in the make file of pacose but not the configure!
+cd solver-proxy/cadical
+./configure
+cd ../..
 
 ## Build Pacose
 mkdir build && cd build && cmake .. && make -j
