--- a/install
+++ b/install
@@ -1,11 +1,9 @@
 echo "Build Pacose 23"
 
-# Pacose
+(cd solver-proxy/cadical && ./configure && make)
+
 mkdir build 
-cd build 
-cmake .. 
-make -j
-cd ..
+(cd build && cmake .. && make -j)
 
 echo ""
 echo "For future builds just execute make or make test in the build directory of Pacose."
